@@ -1,0 +1,18 @@
+#!/bin/sh
+# dhcpcd-backgrounder for net-scripts
+# Version 1.0.0
+# Copyright (c) 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License V2
+# Contributed by Roy Marples (uberlord@gentoo.org)
+
+[[ -z ${MODULES_DIR} ]] && MODULES_DIR=/lib/rcscripts/net.modules.d
+source ${MODULES_DIR}/helpers.d/config-system
+
+iface=${1##*/dhcpcd-}
+iface=${iface%%.info}
+
+if [[ ${2} == up || ${2} == new ]]; then
+	mark_service_started net.${iface}
+else
+	mark_service_inactive net.${iface}
+fi
