@@ -8,12 +8,16 @@
 action=${1}
 echo ${action}
 
+[[ -z ${MODULES_DIR} ]] && MODULES_DIR=/lib/rcscripts/net.modules.d
+source ${MODULES_DIR}/helpers.d/config-system
+
 case "${action}" in
 	bound|renew|deconfig)
 		# We handle these actions
 		;;
 	nak|leasefail)
 		# These are valid actions, but we don't handle them
+		[[ ${action} == leasefail ]] && mark_service_inactive net.${interface}
 		exit 0
 		;;
 	*)
@@ -33,13 +37,11 @@ ip() {
 # We don't flush the link local address
 ip link set up dev ${interface} &>/dev/null
 
-[[ -z ${MODULES_DIR} ]] && MODULES_DIR=/lib/rcscripts/net.modules.d
-source ${MODULES_DIR}/helpers.d/config-system
-
 if [[ ${action} == deconfig ]]; then
 	ip addr flush dev ${interface} scope global &>/dev/null
 	ip addr flush dev ${interface} scope host &>/dev/null
 	restore_configs
+	mark_service_inactive net.${interface}
 	exit 0
 fi
 
@@ -78,5 +80,6 @@ done
 [[ -z ${module} ]] && module=udhcpc
 
 config_system
+mark_service_started net.${interface}
 
 exit 0
