@@ -11,6 +11,9 @@
     interface anyway
     removed hardcoded ath0 in wpa_supplicant
 
+    added rc-script statuses "starting" and "inactive"
+    dhcpcd, udhcpc and dhclient now support backgrounding - fixes #52975
+
   05 Dec 2004; Roy Marples <uberlord@gentoo.org>:
 
     dhclient now kill it's process if it failed to get a lease on startup
